--- a/web_apps/templates/index.html
+++ b/web_apps/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 
-  <title>Analisis de Diabetes</title>
+  <title>Análisis de calida de vino</title>
   <head>
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
