--- a/web_apps/templates/index.html
+++ b/web_apps/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 
-  <title>Análisis de calida de vino</title>
+  <title>MLOps Calidad Vino</title>
   <head>
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +8,8 @@
   <div class="wrapper fadeInDown">
     <div id="formContent">
       <!-- Tabs Titles -->
-      <h3>Analisis de Diabetes</h3>
-      <h2 class="active"> Ingrese los detalles </h2>
+      <h3>Analisis de calidad de Vino </h3>
+      <h2 class="active"> Ingrese la fomrulación del vino</h2>
   
       <!-- Login Form -->
       <form action= "{{ url_for('GetValues')}}" method="post">
