--- a/web_apps/templates/index.html
+++ b/web_apps/templates/index.html
@@ -14,16 +14,16 @@
       <!-- Login Form -->
       <form action= "{{ url_for('GetValues')}}" method="post">
 
-        <input required type="number" id="pregnancies" class="fadeIn second" name="pregnancies"" placeholder="Pregnancies">
-        <input required type="number" id="plasmaglucose" class="fadeIn second" name="plasmaglucose" placeholder="PlasmaGlucose">
-        <input required type="number" id="diastolicbloodpressure" class="fadeIn second" name="diastolicbloodpressure" placeholder="DiastolicBloodPressure">
-        <input required type="number" id="tricepsthickness" class="fadeIn second" name="tricepsthickness" placeholder="TricepsThickness">
-        <input required type="number" id="seruminsulin" class="fadeIn second" name="seruminsulin" placeholder="SerumInsulin">
-        <input required type="number" step="any" id="bmi" class="fadeIn second" name="bmi" placeholder="BMI">
-        <input required type="number" step="any" id="diabetespedigree" class="fadeIn second" name="diabetespedigree" placeholder="DiabetesPedigree">
-        <input required type="number" id="age" class="fadeIn second" name="age" placeholder="age">
+        <input required type="number" id="pregnancies" class="fadeIn second" name="pregnancies"" placeholder="acidez fija">
+        <input required type="number" id="plasmaglucose" class="fadeIn second" name="plasmaglucose" placeholder="acidez volátil">
+        <input required type="number" id="diastolicbloodpressure" class="fadeIn second" name="diastolicbloodpressure" placeholder="ácido cítrico">
+        <input required type="number" id="tricepsthickness" class="fadeIn second" name="tricepsthickness" placeholder="azúcar residual">
+        <input required type="number" id="seruminsulin" class="fadeIn second" name="seruminsulin" placeholder="cloruros">
+        <input required type="number" step="any" id="bmi" class="fadeIn second" name="bmi" placeholder="anhídrido sulfuroso libre">
+        <input required type="number" step="any" id="diabetespedigree" class="fadeIn second" name="diabetespedigree" placeholder=" anhídrido sulfuroso total">
+        <input required type="number" id="age" class="fadeIn second" name="age" placeholder="densidad">
 
-        <input required type="submit" class="fadeIn fourth" value="Predict">
+        <input required type="submit" class="fadeIn fourth" value="Predicir calidad">
        
       </form>
   
