--- a/web_apps/templates/index.html
+++ b/web_apps/templates/index.html
@@ -22,7 +22,10 @@
         <input required type="number" step="any" id="bmi" class="fadeIn second" name="bmi" placeholder="anhídrido sulfuroso libre">
         <input required type="number" step="any" id="diabetespedigree" class="fadeIn second" name="diabetespedigree" placeholder=" anhídrido sulfuroso total">
         <input required type="number" id="age" class="fadeIn second" name="age" placeholder="densidad">
-
+        <input required type="number" id="age" class="fadeIn second" name="age" placeholder="PH">
+        <input required type="number" id="age" class="fadeIn second" name="age" placeholder="Sulfatos">
+        <input required type="number" id="age" class="fadeIn second" name="age" placeholder="Alochol">
+        
         <input required type="submit" class="fadeIn fourth" value="Predicir calidad">
        
       </form>
