--- a/web_apps/static/style.css
+++ b/web_apps/static/style.css
@@ -76,7 +76,7 @@ h2.inactive {
 
 h2.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #54050a;
 }
 
 
@@ -140,7 +140,7 @@ input[type=text] {
 
 input[type=text]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #54050a;
 }
 
 input[type=text]:placeholder {
@@ -170,7 +170,7 @@ input[type=number] {
   
   input[type=number]:focus {
     background-color: #fff;
-    border-bottom: 2px solid #5fbae9;
+    border-bottom: 2px solid #54050a;
   }
   
   input[type=number]:placeholder {
