--- a/web_apps/static/style.css
+++ b/web_apps/static/style.css
@@ -84,7 +84,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-color: #56baed;
+  background-color: #54050a;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -312,7 +312,7 @@ option{
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #56baed;
+  background-color: #54050a;
   content: "";
   transition: width 0.2s;
 }
