--- a/web_apps/templates/index.html
+++ b/web_apps/templates/index.html
@@ -8,7 +8,7 @@
   <div class="wrapper fadeInDown">
     <div id="formContent">
       <!-- Tabs Titles -->
-      <h3>Analisis de calidad de Vino </h3>
+      <h3>Analisis de calidad de Vino <img src="https://storage.googleapis.com/kaggle-datasets-images/4458/6836/30587db9a40233164f65a4a3f148f40d/dataset-card.jpg?t=2017-11-12-14-28-34" alt="Small Image" style="width: 30px; height: 30px;"></h3>
       <h2 class="active"> Ingrese la fomrulación del vino</h2>
   
       <!-- Login Form -->
